--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
 	"require": {
 		"php": ">=5.3.2",
 		"silverstripe/cms": "3.0.*@stable",
-		"silverstripe/framework": "3.0.*@stable"
+		"silverstripe/framework": "3.0.*@stable",
+		"silverstripe/compass": "*",
+		"undefinedoffset/sortablegridfield": "0.2.0"
 	},
 	"minimum-stability": "dev"
 }
