Added Custom Search Module - implemented with results template, added necessary fields on objects and task to write relationships to objects Restyled search bar. Small Responsive Tweaks Added Controller to display transcription Lowered percentage breaks on tag weighting Removed error logs

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -4,4 +4,5 @@ Name: IGF
 Director:
   rules:
     'session//$ID!/$Action': 'SessionController',
-    'meeting//$ID!/$Action': 'MeetingController'
+    'meeting//$ID!/$Action': 'MeetingController',
+    'transcript//$ID': 'TranscriptController'
