Added functionality for links to CMS content for Link, Proposals and Transcripts

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,4 +5,6 @@ Director:
   rules:
     'session//$ID!/$Action': 'SessionController',
     'meeting//$ID!/$Action': 'MeetingController',
-    'transcript//$ID': 'TranscriptController'
+    'transcript//$ID!': 'TranscriptController',
+    'item//$ID!': 'LinkItemController',
+    'proposal//$ID!': 'ProposalController'
