Implemented functionality for Regional and National Igfs

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -7,4 +7,5 @@ Director:
     'meeting//$ID!/$Action': 'MeetingController',
     'transcript//$ID!': 'TranscriptController',
     'item//$ID!': 'LinkItemController',
-    'proposal//$ID!': 'ProposalController'
+    'proposal//$ID!': 'ProposalController',
+    'regional//$ID': 'RegionalNationalController'
