--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -8,6 +8,7 @@ Director:
     'transcript//$ID!': 'TranscriptController',
     'item//$ID!': 'LinkItemController',
     'proposal//$ID!': 'ProposalController',
+    'report//$ID!': 'ReportController',
     'regional//$ID': 'RegionalNationalController'
 SolrCellTextExtractor:
   base_url: 'http://localhost:8983/solr/MyIndex/update/extract'
