--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"silverstripe/compass": "*",
 		"undefinedoffset/sortablegridfield": "0.2.0",
 		"silverstripe/fulltextsearch":"*",
-		"silverstripe/textextraction": "*"
+		"silverstripe/textextraction": "*",
+		"silverstripe/raygun": "*"
 	},
 	"minimum-stability": "dev"
 }
