IGF-79 - Fixed sessions on a non-object issue

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -4,7 +4,7 @@ Name: IGF
 Director:
   rules:
     'session//$ID!/$Action': 'SessionController',
-    'meeting//$ID!/$Action': 'MeetingController',
+    'Meeting//$ID!/$Action': 'MeetingController',
     'transcript//$ID!': 'TranscriptController',
     'item//$ID!': 'LinkItemController',
     'proposal//$ID!': 'ProposalController',
